--- a/extra.css
+++ b/extra.css
@@ -1,4 +1,4 @@
 /* extra css */
 
 /* Hide these for now */
-.social-bar a[href*="facebook"], .social-bar a[href*="twitter"] { display: none; }
+.social-bar a[href*="facebook"], .social-bar a[href*="instagram"] { display: none; }
