--- a/extra.css
+++ b/extra.css
@@ -2,3 +2,12 @@
 
 /* Hide these for now */
 .social-bar a[href*="facebook"], .social-bar a[href*="instagram"] { display: none; }
+
+/* Force IE8 to mobile size */
+.ie8 body.root > header,  
+.ie8 body.root > footer,  
+.ie8 body.root > div { 
+  width: 480px; 
+  margin: 0 auto; 
+ }
+.ie8 .timeline { display: none; }
